// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Form should not render no settings message when instructed not to 1`] = `<Fragment />`;

exports[`Form should render no settings message when there are no settings 1`] = `
<Fragment>
  <EuiPanel
    paddingSize="l"
  >
    <FormattedMessage
      defaultMessage="No settings found {clearSearch}"
      id="kbn.management.settings.form.noSearchResultText"
      values={
        Object {
          "clearSearch": <ForwardRef
            onClick={[Function]}
          >
            <FormattedMessage
              defaultMessage="(clear search)"
              id="kbn.management.settings.form.clearNoSearchResultText"
              values={Object {}}
            />
          </ForwardRef>,
        }
      }
    />
  </EuiPanel>
</Fragment>
`;

exports[`Form should render normally 1`] = `
<Fragment>
  <EuiPanel
    paddingSize="l"
  >
    <EuiForm>
      <EuiText>
        <EuiFlexGroup
          alignItems="baseline"
        >
          <EuiFlexItem
            grow={false}
          >
            <h2>
              General
            </h2>
          </EuiFlexItem>
        </EuiFlexGroup>
      </EuiText>
      <EuiSpacer
        size="m"
      />
      <Field
        clear={[Function]}
        enableSaving={true}
        key="general:test:date"
        save={[Function]}
        setting={
          Object {
            "ariaName": "general test date",
            "category": Array [
              "general",
            ],
            "description": "bar",
            "displayName": "Test date",
            "name": "general:test:date",
          }
        }
      />
      <Field
        clear={[Function]}
        enableSaving={true}
        key="setting:test"
        save={[Function]}
        setting={
          Object {
            "ariaName": "setting test",
            "category": Array [
              "general",
            ],
            "description": "foo",
            "displayName": "Test setting",
            "name": "setting:test",
          }
        }
      />
    </EuiForm>
  </EuiPanel>
  <EuiSpacer
    size="l"
  />
  <EuiPanel
    paddingSize="l"
  >
    <EuiForm>
      <EuiText>
        <EuiFlexGroup
          alignItems="baseline"
        >
          <EuiFlexItem
            grow={false}
          >
            <h2>
              Dashboard
            </h2>
          </EuiFlexItem>
        </EuiFlexGroup>
      </EuiText>
      <EuiSpacer
        size="m"
      />
      <Field
        clear={[Function]}
        enableSaving={true}
        key="dashboard:test:setting"
        save={[Function]}
        setting={
          Object {
            "ariaName": "dashboard test setting",
            "category": Array [
              "dashboard",
            ],
            "displayName": "Dashboard test setting",
            "name": "dashboard:test:setting",
          }
        }
      />
    </EuiForm>
  </EuiPanel>
  <EuiSpacer
    size="l"
  />
  <EuiPanel
    paddingSize="l"
  >
    <EuiForm>
      <EuiText>
        <EuiFlexGroup
          alignItems="baseline"
        >
          <EuiFlexItem
            grow={false}
          >
            <h2>
              X-pack
            </h2>
          </EuiFlexItem>
          <EuiFlexItem
            grow={false}
          >
            <em>
              <FormattedMessage
                defaultMessage="Search terms are hiding {settingsCount} settings {clearSearch}"
                id="kbn.management.settings.form.searchResultText"
                values={
                  Object {
                    "clearSearch": <ForwardRef
                      onClick={[Function]}
                    >
                      <em>
                        <FormattedMessage
                          defaultMessage="(clear search)"
                          id="kbn.management.settings.form.clearSearchResultText"
                          values={Object {}}
                        />
                      </em>
                    </ForwardRef>,
                    "settingsCount": 9,
                  }
                }
              />
            </em>
          </EuiFlexItem>
        </EuiFlexGroup>
      </EuiText>
      <EuiSpacer
        size="m"
      />
      <Field
        clear={[Function]}
        enableSaving={true}
        key="xpack:test:setting"
        save={[Function]}
        setting={
          Object {
            "ariaName": "xpack test setting",
            "category": Array [
              "x-pack",
            ],
            "description": "bar",
            "displayName": "X-Pack test setting",
            "name": "xpack:test:setting",
          }
        }
      />
    </EuiForm>
  </EuiPanel>
  <EuiSpacer
    size="l"
  />
</Fragment>
`;

exports[`Form should render read-only when saving is disabled 1`] = `
<Fragment>
  <EuiPanel
    paddingSize="l"
  >
    <EuiForm>
      <EuiText>
        <EuiFlexGroup
          alignItems="baseline"
        >
          <EuiFlexItem
            grow={false}
          >
            <h2>
              General
            </h2>
          </EuiFlexItem>
        </EuiFlexGroup>
      </EuiText>
      <EuiSpacer
        size="m"
      />
      <Field
        clear={[Function]}
        enableSaving={false}
        key="general:test:date"
        save={[Function]}
        setting={
          Object {
            "ariaName": "general test date",
            "category": Array [
              "general",
            ],
            "description": "bar",
            "displayName": "Test date",
            "name": "general:test:date",
          }
        }
      />
      <Field
        clear={[Function]}
        enableSaving={false}
        key="setting:test"
        save={[Function]}
        setting={
          Object {
            "ariaName": "setting test",
            "category": Array [
              "general",
            ],
            "description": "foo",
            "displayName": "Test setting",
            "name": "setting:test",
          }
        }
      />
    </EuiForm>
  </EuiPanel>
  <EuiSpacer
    size="l"
  />
  <EuiPanel
    paddingSize="l"
  >
    <EuiForm>
      <EuiText>
        <EuiFlexGroup
          alignItems="baseline"
        >
          <EuiFlexItem
            grow={false}
          >
            <h2>
              Dashboard
            </h2>
          </EuiFlexItem>
        </EuiFlexGroup>
      </EuiText>
      <EuiSpacer
        size="m"
      />
      <Field
        clear={[Function]}
        enableSaving={false}
        key="dashboard:test:setting"
        save={[Function]}
        setting={
          Object {
            "ariaName": "dashboard test setting",
            "category": Array [
              "dashboard",
            ],
            "displayName": "Dashboard test setting",
            "name": "dashboard:test:setting",
          }
        }
      />
    </EuiForm>
  </EuiPanel>
  <EuiSpacer
    size="l"
  />
  <EuiPanel
    paddingSize="l"
  >
    <EuiForm>
      <EuiText>
        <EuiFlexGroup
          alignItems="baseline"
        >
          <EuiFlexItem
            grow={false}
          >
            <h2>
              X-pack
            </h2>
          </EuiFlexItem>
          <EuiFlexItem
            grow={false}
          >
            <em>
              <FormattedMessage
                defaultMessage="Search terms are hiding {settingsCount} settings {clearSearch}"
                id="kbn.management.settings.form.searchResultText"
                values={
                  Object {
                    "clearSearch": <ForwardRef
                      onClick={[Function]}
                    >
                      <em>
                        <FormattedMessage
                          defaultMessage="(clear search)"
                          id="kbn.management.settings.form.clearSearchResultText"
                          values={Object {}}
                        />
                      </em>
                    </ForwardRef>,
                    "settingsCount": 9,
                  }
                }
              />
            </em>
          </EuiFlexItem>
        </EuiFlexGroup>
      </EuiText>
      <EuiSpacer
        size="m"
      />
      <Field
        clear={[Function]}
        enableSaving={false}
        key="xpack:test:setting"
        save={[Function]}
        setting={
          Object {
            "ariaName": "xpack test setting",
            "category": Array [
              "x-pack",
            ],
            "description": "bar",
            "displayName": "X-Pack test setting",
            "name": "xpack:test:setting",
          }
        }
      />
    </EuiForm>
  </EuiPanel>
  <EuiSpacer
    size="l"
  />
</Fragment>
`;
